--- a/app/views/caseload/new.html.erb
+++ b/app/views/caseload/new.html.erb
@@ -25,7 +25,7 @@
         <td aria-label="Prisoner number" class="govuk-table__cell "><%= allocation.nomis_offender_id %></td>
         <td aria-label="Arrival date" class="govuk-table__cell "><%= format_date(sentence.sentence_start_date) %></td>
         <td aria-label="Release date" class="govuk-table__cell "><%= format_date(sentence.earliest_release_date) %></td>
-        <td aria-label="Allocation date" class="govuk-table__cell "><%= format_date(allocation.created_at) %></td>
+        <td aria-label="Allocation date" class="govuk-table__cell "><%= format_date(allocation.updated_at) %></td>
         <td aria-label="Role" class="govuk-table__cell "><%= allocation.responsibility %></td>
       </tr>
     <% end %>
