--- a/app/views/shared/_allocation_history.html.erb
+++ b/app/views/shared/_allocation_history.html.erb
@@ -12,7 +12,7 @@
                 <br/>
                 Tier: <%= allocation.allocated_at_tier %>
               </p>
-              <p class="time"><%= format_date_long(allocation.created_at) %>
+              <p class="time"><%= format_date_long(allocation.updated_at) %>
                 by <%= allocation.created_by_name.titlecase %></p>
             </li>
           <% end %>
