--- a/app/views/allocations/history.html.erb
+++ b/app/views/allocations/history.html.erb
@@ -1,3 +1,7 @@
+<%= render :partial => "/shared/backlink", :locals => { :page => allocation_path(@history.first.nomis_offender_id) } %>
+
+<h1 class="govuk-heading-l"><%= @prisoner_name %></h1>
+
 <% @history.grouped_by_prison do |prison, allocations| %>
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
