--- a/app/views/allocations/_allocate_primary_pom.html.erb
+++ b/app/views/allocations/_allocate_primary_pom.html.erb
@@ -1,7 +1,9 @@
 <li class="action_needed">
   <h2 class="govuk-heading-s">Prisoner allocation</h2>
-<p>Prisoner allocated to
-  <%= link_to(allocation.primary_pom_name.titleize, prison_pom_path(@prison, allocation.primary_pom_nomis_id)) %>
+<p>Prisoner allocated to <%= allocation.primary_pom_name.titleize %>
+  <% unless @pom_emails[allocation.primary_pom_nomis_id].nil? %>
+    - <%= mail_to(@pom_emails[allocation.primary_pom_nomis_id]) %>
+  <% end %>
   <br/>
   Tier: <%= allocation.allocated_at_tier %>
 <p class="time"><%= format_date_long(allocation.updated_at) %>
