--- a/app/views/allocations/history.html.erb
+++ b/app/views/allocations/history.html.erb
@@ -4,7 +4,7 @@
 
 <% @history.grouped_by_prison do |prison, allocations| %>
   <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
+    <div class="govuk-grid-column">
       <div class="timeline">
         <h2 class="govuk-heading-m"><%= prison_title(prison) %></h2>
         <ul>
