Implement limit to reason text box for overrides
At present we have a free text field that SPOs can write in their
reasons for overriding a recommended POM type during an allocation.  A
conversation with our content designer and service designer led to an
agreement that we will restrict the number of characters that can be
added to no more than 175 before they see alerts.  If an SPO tries to
submit the form with the either/both text areas containing more than 175
characters then it will prevent them from progressing further and
include an error in the summary at the top of the page.

--- a/app/views/overrides/new.html.erb
+++ b/app/views/overrides/new.html.erb
@@ -33,8 +33,12 @@
                   </span>
                 <% end %>
                 <div class="govuk-form-group <% if @override.errors[:suitability_detail].present? %>govuk-form-group--error<% end %>">
-                  <label class="govuk-label" for="provide-detail">Enter your reason for this decision</label>
-                  <textarea class="govuk-textarea" id="suitability-detail" name="override[suitability_detail]" rows="3" aria-describedby="suitability-detail-hint suitability-detail-error"></textarea>
+                  <div class="govuk-character-count" data-module="character-count" data-maxlength="175">
+                    <div class="govuk-form-group">
+                      <label class="govuk-label" for="provide-detail">Enter your reason for this decision</label>
+                      <textarea class="govuk-textarea js-character-count " id="suitability-detail" name="override[suitability_detail]" rows="3" aria-describedby="suitability-detail-hint suitability-detail-error"></textarea>
+                    </div>
+                  </div>
                 </div>
               </div>
               <div class="govuk-checkboxes__item">
@@ -58,9 +62,13 @@
                     <%= @override.errors[:more_detail].first %>
                   </span>
                 <% end %>
-                  <label class="govuk-label" for="provide-detail">Please provide detail
-                    here</label>
-                  <textarea class="govuk-textarea" id="more-detail" name="override[more_detail]" rows="3" aria-describedby="more-detail-hint more-detail-error"></textarea>
+                <div class="govuk-character-count" data-module="character-count" data-maxlength="175">
+                  <div class="govuk-form-group">
+                    <label class="govuk-label" for="provide-detail">Please provide detail
+                      here</label>
+                    <textarea class="govuk-textarea js-character-count govuk-textarea--error" id="more-detail" name="override[more_detail]" rows="3" aria-describedby="more-detail-hint more-detail-error"></textarea>
+                  </div>
+                </div>
               </div>
             </div>
           </fieldset>
