--- a/app/views/summary/pending.html.erb
+++ b/app/views/summary/pending.html.erb
@@ -50,7 +50,13 @@
           <% end %>
         </td>
         <td aria-label="Waiting" class="govuk-table__cell"><%= offender.awaiting_allocation_for %> days</td>
-        <td aria-label="Action" class="govuk-table__cell "><%= link_to "Edit", new_prison_case_information_path(@prison, offender.offender_no) %></td>
+        <td aria-label="Action" class="govuk-table__cell ">
+          <% if auto_delius_import_enabled?(@prison) %>
+            <%= link_to "Update", prison_case_information_path(@prison, offender.offender_no) %>
+          <% else %>
+            <%= link_to "Edit", new_prison_case_information_path(@prison, offender.offender_no) %></td>
+          <% end %>
+        </td>
       </tr>
     <% end %>
     </tbody>
