--- a/app/views/summary/pending.html.erb
+++ b/app/views/summary/pending.html.erb
@@ -54,7 +54,7 @@
           <% if auto_delius_import_enabled?(@prison) %>
             <%= link_to "Update", prison_case_information_path(@prison, offender.offender_no) %>
           <% else %>
-            <%= link_to "Edit", new_prison_case_information_path(@prison, offender.offender_no) %></td>
+            <%= link_to "Update", prison_case_information_path(@prison, offender.offender_no) %></td>
           <% end %>
         </td>
       </tr>
