Co-working confirmation page content changed

--- a/app/views/coworking/confirm.html.erb
+++ b/app/views/coworking/confirm.html.erb
@@ -4,7 +4,8 @@
   <div class="govuk-grid-column-two-thirds">
     <%= form_tag(prison_coworking_index_path(@prison), method: :post, id: "confirm_coworking_allocation_form") do %>
       <h1 class="govuk-heading-l govuk-!-margin-bottom-5">Confirm co-working allocation</h1>
-      <p class="govuk-body">You are allocating <%= "#{@secondary_pom.first_name} #{@secondary_pom.last_name}".titleize %> to work with <%= "#{@primary_pom.first_name} #{@primary_pom.last_name}".titleize %> on <%= "#{@prisoner.first_name} #{@prisoner.last_name}".titleize %></p>
+      <p class="govuk-body">You are allocating co-working POM <%= "#{@secondary_pom.first_name} #{@secondary_pom.last_name}".titleize %> to <%= "#{@prisoner.first_name} #{@prisoner.last_name}".titleize %>.
+        The responsible POM is <%= "#{@primary_pom.first_name} #{@primary_pom.last_name}".titleize %>.</p>
       <% if @secondary_pom.emails.empty? %>
         <p class="govuk-body">No notification email will be sent to <%= "#{@secondary_pom.first_name} #{@secondary_pom.last_name}".titleize %> as they have no registered email address in NOMIS.</p>
       <% else %>
