Change Allocation Information to display the following:
The allocation history row displays the last event in a more
readable format.

Co-working POM row displays the link 'Remove' instead of
'Deallocate' if there is a POM already assigned.

--- a/app/views/allocations/show.html.erb
+++ b/app/views/allocations/show.html.erb
@@ -141,7 +141,7 @@
           <%= link_to 'Allocate', new_prison_coworking_path(@prison, @prisoner.offender_no), class: "govuk-link pull-right" %>
         <% else %>
           <%= link_to @coworker.full_name, prison_pom_path(@prison, @coworker.staff_id), class: "govuk-link" %>
-          <%= link_to 'Deallocate', prison_coworking_path(@prison, @prisoner.offender_no), method: :delete, class: "govuk-link pull-right" %>
+          <%= link_to 'Remove', prison_coworking_path(@prison, @prisoner.offender_no), method: :delete, class: "govuk-link pull-right" %>
         <% end %>
       </td>
     </tr>
