Add content to Allocation History deallocation events
When a POM or a co-worker has been deallocated (this does
not include when a prisoner has been transferred), add
content detailing the name and email address (if present)
of the POM or co-worker.

Move the functionality of determining whether the POMs
email address is present or not from the views into a
helper method.

--- a/app/views/allocations/_deallocate_pom.html.erb
+++ b/app/views/allocations/_deallocate_pom.html.erb
@@ -5,7 +5,11 @@
     <% end %>
   </h2>
   <p>
-  &nbsp;
+    <% unless allocation.event_trigger == 'offender_transferred' %>
+      Prisoner unallocated <%= allocation_type == 'Co-working' ? 'co-working POM ' : 'POM ' %>
+    <%= pom_name.titleize %> - <%= format_email(@pom_emails[pom_id]) %>
+    <% end %>
+  </p>
   <br/>
 &nbsp;
   <p class="time"><%= format_date_long(allocation.updated_at) %></p>
