--- a/app/views/allocations/_allocate_pom.html.erb
+++ b/app/views/allocations/_allocate_pom.html.erb
@@ -1,9 +1,7 @@
 <li class="action_needed">
   <h2 class="govuk-heading-s"><%= allocation_type %> allocation</h2>
 <p>Prisoner allocated to <%= pom_name.titleize %>
-  <% unless @pom_emails[pom_nomis_id].nil? %>
-    - <%= mail_to(@pom_emails[pom_nomis_id]) %>
-  <% end %>
+  - <%= format_email(@pom_emails[pom_nomis_id]) %>
   <br/>
   Tier: <%= allocation.allocated_at_tier %></p>
   <% if allocation.override_reasons.present? %>
