--- a/app/views/allocations/history.html.erb
+++ b/app/views/allocations/history.html.erb
@@ -8,7 +8,7 @@
       <div class="timeline">
         <h2 class="govuk-heading-m"><%= prison_title(prison) %></h2>
         <ul>
-          <% allocations.each do |allocation| %>
+          <% allocations.each_with_index do |allocation, i| %>
             <% if allocation.event == 'allocate_primary_pom' %>
               <%= render :partial => "allocate_pom",
                          :locals => { allocation: allocation, allocation_type: 'Prisoner',
@@ -25,10 +25,16 @@
                                       pom_nomis_id: allocation.secondary_pom_nomis_id} %>
             <% elsif allocation.event == 'deallocate_primary_pom' %>
               <%= render :partial => "deallocate_pom",
-                         :locals => { allocation: allocation, allocation_type: 'Prisoner' } %>
+                         :locals => { allocation: allocation,
+                                      allocation_type: 'Prisoner',
+                                      pom_name: allocations[i + 1].primary_pom_name,
+                                      pom_id: allocations[i + 1].primary_pom_nomis_id }%>
             <% elsif allocation.event == 'deallocate_secondary_pom' %>
               <%= render :partial => "deallocate_pom",
-                         :locals => { allocation: allocation, allocation_type: 'Co-working' } %>
+                         :locals => { allocation: allocation,
+                                      allocation_type: 'Co-working',
+                                      pom_name: allocations[i + 1].secondary_pom_name,
+                                      pom_id: allocations[i + 1].secondary_pom_nomis_id } %>
             <% end %>
           <% end %>
         </ul>
