Fix Allocation History view
We have a small bug where if the "created_by_name" field is nil then the
allocation history page crashes.  There are a number of allocations that
were made before this field was implemented, so to ensure the page
doesn't crash we are only displaying the name if it exists.

--- a/app/views/shared/_allocation_history.html.erb
+++ b/app/views/shared/_allocation_history.html.erb
@@ -13,7 +13,9 @@
                 Tier: <%= allocation.allocated_at_tier %>
               </p>
               <p class="time"><%= format_date_long(allocation.primary_pom_allocated_at) %>
-                by <%= allocation.created_by_name.titleize %></p>
+                <% if allocation.created_by_name.present? %>
+                  by <%= allocation.created_by_name.titleize %></p>
+                <% end %>
             </li>
           <% end %>
         </ul>
