--- a/app/views/allocations/_allocate_pom.html.erb
+++ b/app/views/allocations/_allocate_pom.html.erb
@@ -15,5 +15,7 @@
     <% end %>
   <% end %>
 <p class="time"><%= format_date_long(allocation.updated_at) %>
-  by <%= allocation.created_by_name.titleize %></p>
+  <% if allocation.created_by_name.present? %>
+    by <%= allocation.created_by_name.titleize %></p>
+  <% end %>
 </li>
