--- a/app/views/allocations/_reallocate_primary_pom.html.erb
+++ b/app/views/allocations/_reallocate_primary_pom.html.erb
@@ -7,5 +7,7 @@
     <br/>
     Tier: <%= allocation.allocated_at_tier %>
   <p class="time"><%= format_date_long(allocation.updated_at) %>
-    by <%= allocation.created_by_name.titleize %></p>
+    <% if allocation.created_by_name.present? %>
+      by <%= allocation.created_by_name.titleize %></p>
+    <% end %>
 </li>
