--- a/app/views/layouts/_phase_banner.html.erb
+++ b/app/views/layouts/_phase_banner.html.erb
@@ -3,7 +3,7 @@ width-container">
   <p class="govuk-phase-banner__content">
     <strong class="govuk-tag hmpps-tag__beta govuk-phase-banner__content__tag ">beta</strong>
     <span class="govuk-phase-banner__text">
-      This is a new service – your <a class="govuk-link" href="mailto:<%= Rails.configuration.support_email %>">feedback</a> will help us to improve it.
+      This is a new service – your <%= link_to("feedback", "https://www.research.net/r/MM8TNLW", target: "_blank") %> will help us to improve it.
     </span>
   </p>
 </div>
