Rename the omicable field to welsh_offender
The field formerly known as `omicable` in CaseInformation was used to
differentiate offenders who should be subject to the OMIC policy.  As
the determination of omicability has changed (based on the 2 go-live
dates for the policy) this has been renamed to reflect what it actually
captures.

--- a/app/views/allocations/_case_information.html.erb
+++ b/app/views/allocations/_case_information.html.erb
@@ -19,7 +19,7 @@
   <tr class="govuk-table__row">
     <td class="govuk-table__cell">Last known address in Wales</td>
     <td class="govuk-table__cell table_cell__left_align">
-      <%= humanized_bool(@prisoner.omicable) %>
+      <%= humanized_bool(@prisoner.welsh_offender) %>
       <a class="govuk-link pull-right" href="<%= edit_prison_case_information_path(@prison, @prisoner.offender_no) %>">Change</a>
     </td>
   </tr>
