--- a/app/views/debugging/debugging.html.erb
+++ b/app/views/debugging/debugging.html.erb
@@ -77,10 +77,10 @@
         <% end %>
       </td>
     </tr>
-    <tr class="govuk-table__row" id="omicable">
+    <tr class="govuk-table__row" id="welsh_offender">
       <td class="govuk-table__cell">Last known address in Wales</td>
       <td class="govuk-table__cell table_cell__left_align">
-        <%= humanized_bool(@offender.omicable) %>
+        <%= humanized_bool(@offender.welsh_offender) %>
       </td>
     </tr>
     <tr class="govuk-table__row" id="responsibility"">
