--- a/app/views/allocations/show.html.erb
+++ b/app/views/allocations/show.html.erb
@@ -54,7 +54,7 @@
     <tr class="govuk-table__row">
       <td class="govuk-table__cell">Last known address in Wales</td>
       <td class="govuk-table__cell table_cell__left_align">
-        <%= humanized_bool(@prisoner.omicable) %>
+        <%= humanized_bool(@prisoner.welsh_offender) %>
         <% unless auto_delius_import_enabled?(@prison) %>
           <a class="govuk-link pull-right" href="<%= edit_prison_case_information_path(@prison, @prisoner.offender_no) %>">Change</a>
         <% end %>
