--- a/app/views/prisoners/_prisoner_information.html.erb
+++ b/app/views/prisoners/_prisoner_information.html.erb
@@ -43,7 +43,7 @@
     <tr class="govuk-table__row">
       <td class="govuk-table__cell govuk-!-width-one-half">Last known address in Wales</td>
       <td class="govuk-table__cell table_cell__left_align  govuk-!-width-one-half">
-        <%= humanized_bool(@prisoner.omicable) %>
+        <%= humanized_bool(@prisoner.welsh_offender) %>
       </td>
     </tr>
     <tr class="govuk-table__row">
