--- a/app/views/debugging/debugging.html.erb
+++ b/app/views/debugging/debugging.html.erb
@@ -43,12 +43,12 @@
       <td class="govuk-table__cell table_cell__left_align">
         <%= humanized_bool(@offender.convicted?) %> (<%= @offender.convicted_status %>)
     </tr>
-    <tr class="govuk-table__row" id="sentenced"">
+    <tr class="govuk-table__row" id="sentenced">
       <td class="govuk-table__cell">Sentenced?</td>
       <td class="govuk-table__cell table_cell__left_align">
         <%= humanized_bool(@offender.sentenced?) %>
     </tr>
-    <tr class="govuk-table__row" id="recalled"">
+    <tr class="govuk-table__row" id="recalled">
       <td class="govuk-table__cell">Recalled?</td>
       <td class="govuk-table__cell table_cell__left_align">
         <%= humanized_bool(@offender.recalled?) %>
@@ -83,7 +83,7 @@
         <%= humanized_bool(@offender.welsh_offender) %>
       </td>
     </tr>
-    <tr class="govuk-table__row" id="responsibility"">
+    <tr class="govuk-table__row" id="responsibility">
       <td class="govuk-table__cell govuk-!-width-one-half">Current responsibility</td>
       <td class="govuk-table__cell table_cell__left_align govuk-!-width-one-half">
         <%= case_owner_label(@offender) %>
