--- a/app/views/allocations/confirm_reallocation.html.erb
+++ b/app/views/allocations/confirm_reallocation.html.erb
@@ -1,4 +1,4 @@
-<%= render :partial => "/shared/backlink", :locals => { :page => new_prison_allocation_path(@prison, @prisoner.offender_no) } %>
+<%= link_to "Back", 'javascript:history.back()', class: "govuk-back-link govuk-!-margin-top-0 govuk-!-margin-bottom-6" %>
 
 <div class="govuk-grid-row">
 
