--- a/app/views/debugging/debugging.html.erb
+++ b/app/views/debugging/debugging.html.erb
@@ -109,7 +109,7 @@
     <tr class="govuk-table__row" id="imprisonment-status">
       <td class="govuk-table__cell govuk-!-width-one-half">Imprisonment status</td>
       <td class="govuk-table__cell table_cell__left_align govuk-!-width-one-half">
-        <%= @offender.imprisonment_status %> - <%= SentenceTypeService.describe_sentence(@offender.imprisonment_status) %>
+        <%= @offender.sentence_type_code %> - <%= @offender.describe_sentence %>
       </td>
     </tr>
     <tr class="govuk-table__row" id="sentence-type">
