--- a/app/views/pages/_content.html.erb
+++ b/app/views/pages/_content.html.erb
@@ -4,18 +4,18 @@
       <li class="govuk-breadcrumbs__list-item">
         <a class="govuk-breadcrumbs__link" href="/">Home</a>
       </li>
-      <li class="govuk-breadcrumbs__list-item" aria-current="page">Guidance</li>
+      <li class="govuk-breadcrumbs__list-item" aria-current="page">Help</li>
     </ol>
     <br>
   </div>
 
   <div class="govuk-section-break--visible">
-    <h1 class="govuk-heading-l">Guidance</h1>
+    <h1 class="govuk-heading-l">Getting set up</h1>
     <p>Contents</p>
     <ul class="govuk-list--bullet">
       <li>
         <% if page == 0 %>
-          Get started with the allocations service
+          Overview
         <% else %>
           <%= link_to "Get started with the allocations service", "help" %>
         <% end %>
