--- a/app/views/pages/help.html.erb
+++ b/app/views/pages/help.html.erb
@@ -1,30 +1,8 @@
-<%= render :partial => "content", locals: { page: 0 } %>
-
-<h2 class="govuk-heading-l">Get started with the allocations service</h2>
-
-<div class="govuk-grid-column">
-  <div class="govuk-body">
-
-    <p>You will be able to allocate prison offender managers to prisoners using the new allocations service.</p>
-
-    <p>There are a few tasks that need to be completed before you can start making allocations.
-      These need to be completed in the order that they are described in this guide.</p>
-
-    <p>You will need to work together to complete the set-up.</p>
-
-    <ul>
-      <li><%=link_to "Task 1", "help_step1" %>: Senior Probation Officer / Head of Offender Management Unit (SPO/HoOMU)</li>
-      <li><%=link_to "Task 2", "help_step2" %>: Local System Administrator</li>
-      <li><%=link_to "Task 3", "help_step3" %>: Local System Administrator</li>
-      <li><%=link_to "Task 4", "help_step4" %>: Senior Probation Officer / Head of Offender Management Unit (SPO/HoOMU) / Case admin</li>
-      <li><%=link_to "Task 5", "help_step5" %>: Senior Probation Officer / Head of Offender Management Unit (SPO/HoOMU) / Case admin</li>
-      <li><%=link_to "Task 6", "help_step6" %>: Senior Probation Officer / Head of Offender Management Unit (SPO/HoOMU)</li>
-    </ul>
-
-    <p>When you are set up, use Firefox to sign in to the service using your NOMIS ID
-        and password at:
-      <%= link_to "https://moic.service.justice.gov.uk", "https://moic.service.justice.gov.uk" %>
-    </p>
+<div class="govuk-grid-row">
+  <div class="govuk-grid-column-two-thirds">
+    <h1 class="govuk-heading-l govuk-!-margin-bottom-5">Help</h1>
+      <li><%= link_to 'Getting set up', help_step0_path, class: "govuk-link" %>
+      <li><%= link_to "Updating case information", update_case_information_path,class: "govuk-link" %></li>
+      <li><%= link_to "Missing cases", missing_cases_path,class: "govuk-link" %></li>
   </div>
 </div>
-<br>
